[package]
name = "ccandle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
candle-core = { version = "0.4.1", default-features = false, features = [] }
candle-nn = "0.4.1"
candle-transformers = { version = "0.4.1", default-features = false, features = [] }
hf-hub = "0.3.2"
serde_json = "1.0.114"
tokenizers = "0.15.2"

[features]
default = []
gpu = ["candle-transformers/cuda"]

[build-dependencies]
cbindgen = "0.26.0"
